--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -1,13 +1,21 @@
+{{!-- {{#each error}}
+  <div class="alert alert-primary" role="alert">
+    {{text}}
+  </div>
+{{else}}
+{{/each}} --}}
+
 <div class="container">
-  <form action="submit">
+  <form action="/todo" method="post">
   <div class="form-group">
     <label for="title">Title</label>
-    <input type="text" class="form-control" id="title" aria-describedby="emailHelp" placeholder="title">
-    <small id="titleHelper" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <input name="title" type="text" class="form-control" id="title" aria-describedby="title" placeholder="title" >
+    {{!-- <small id="titleHelper" class="form-text text-muted">{{error.title}}</small> --}}
   </div>
   <div class="form-group">
     <label for="description">Description</label>
-    <input type="text" class="form-control" id="description" placeholder="description">
+    <input name="description" type="text" class="form-control" id="description" placeholder="description" >
+    {{!-- <small id="descriptionHelper" class="form-text text-muted">{{error.description}}</small>     --}}
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
