--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,17 +20,19 @@
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
   <!-- Plugin CSS -->
-  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+  <link href="/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+
+  <!-- CSS -->  
+  <link href="/css/index.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/creative.min.css" rel="stylesheet">
+  <link href="/css/creative.min.css" rel="stylesheet">
 
 
   <!-- Custom styles for this template -->
 </head>
   <body id="page-top">
     {{> _navbar}}
-    {{> _header}}
     {{{body}}}
     {{> _toast}}
 
@@ -43,10 +45,10 @@
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/creative.min.js"></script>
+  <script src="/js/creative.min.js"></script>
 </body>
 </html>
