--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,94 +1,75 @@
-    <!-- Navigation -->
+  <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">NODEJS PRACTICE</a>
+        <a class="navbar-brand js-scroll-trigger" href="/#page-top">NODEJS PRACTICE</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="/#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="/#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="/#portfolio">Portfolio</a>
+            </li>
+            
+            {{#if usernameAuth.username}}
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" id="logout" href="">Logout</a>
             </li>
+            <li class="nav-item">
+              <h4 class="text-white hello">
+                <span class="hello-text">Hello</span>
+              {{usernameAuth.username}}
+              </h4>
+            </li>
+            {{else}} 
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="/user/register">Register</a>
+              </li>
+                <span class="mr-2 pre-fix text-white">or</span>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="" data-toggle="modal" data-target="#loginModal">Login</a>
+              </li>
+            {{/if}}
+            
           </ul>
         </div>
       </div>
     </nav>
 
-{{!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/todo/list">Todo List</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Login or Register
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <span class="dropdown-item" data-toggle="modal" data-target="#registerModal">Register</span>
-          <a class="dropdown-item" href="/">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-
 <!-- Modal -->
-<div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModal" aria-hidden="true">
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Register</h5>
+        <h5 class="modal-title">Login</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form action="/user/register" method="post">
+      <form action="/login" method="post">
         <div class="modal-body">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <label for="username">Username</label>
+            <input type="text" name="username" class="form-control" aria-describedby="username" placeholder="Enter username">
+            
           </div>
           <div class="form-group">
-            <label for="exampleInputUsername">Username</label>
-            <input name="username" type="text" class="form-control" id="exampleInputUsername" aria-describedby="username" placeholder="Username">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" name="password" class="form-control" id="password" placeholder="Password">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword2">Password Confirm</label>
-            <input type="password" class="form-control" id="confirm_password" placeholder="Retype-Password">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password" placeholder="Password">
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary" id="user-register">Register</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-primary">Login</button>
         </div>
       </form>
     </div>
@@ -96,18 +77,18 @@
 </div>
 
 <script>
-var password = document.getElementById("password")
-  , confirm_password = document.getElementById("confirm_password");
-
-function validatePassword(){
-  if(password.value != confirm_password.value) {
-    confirm_password.setCustomValidity("Passwords Don't Match");
-  } else {
-    confirm_password.setCustomValidity('');
+  var element = document.querySelector("#logout")
+  var http = new XMLHttpRequest();
+  var url = '/logout';
+  const params = "logout"
+  http.open('POST', url, true);
+  http.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+  if(element) {
+     element.addEventListener('click', function(e) {
+      if(http.readyState == 4 && http.status == 200) {
+          alert(http.responseText);
+      }
+      http.send(params);
+    })
   }
-}
-
-password.addEventListener('ValueChange',validatePassword );
-confirm_password.addEventListener('keyup',validatePassword);
-
-</script> --}}
+</script>
