--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -163,42 +163,17 @@
   <div class="container text-center">
     <h2 class="mb-4 text-dark">Projects with Nodejs</h2>
     <div class="row">
-      <div class="col-3">
-        <div class="card" style="background-image: url('img/portfolio/thumbnails/6.jpg');background-size: cover; background-position: center;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
+      
+      
+
+      
 
       <div class="col-3">
         <div class="card" style="background-image: url('img/portfolio/thumbnails/6.jpg');background-size: cover; background-position: center;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-3">
-        <div class="card" style="background-image: url('img/portfolio/thumbnails/6.jpg');background-size: cover; background-position: center;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-3">
-        <div class="card" style="background-image: url('img/portfolio/thumbnails/6.jpg');background-size: cover; background-position: center;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="/todo/list" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">TODO LIST</h5>
+            <p class="card-text">Todolist on your account.</p>
+            <a href="/todo/list" class="btn btn-primary">Go to todolist page</a>
           </div>
         </div>
       </div>
