feat(google-auth)

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -67,11 +67,24 @@
             <input type="password" class="form-control" name="password" placeholder="Password">
           </div>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer justify-content-center">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           <button type="submit" class="btn btn-primary">Login</button>
         </div>
       </form>
+      <div class="row justify-content-center mb-2">
+        or
+      </div>
+      <div class="row justify-content-center mb-3">
+        <a href="/auth/google">
+          <div class="google-btn">
+            <div class="google-icon-wrapper">
+              <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+            </div>
+            <p class="btn-text"><b>Sign in with google</b></p>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
 </div>
