--- a/views/stories/story.handlebars
+++ b/views/stories/story.handlebars
@@ -1,7 +1,7 @@
-<section class="bg-secondary" id="about">
+<section class="bg-dark" id="about">
   <div class="container">
     <div class="row justify-content-center p-5">
-      <h3 class="col-12 text-center text-white mb-3"> TODO LIST </h3>
+      <h3 class="col-12 text-center  mb-3"> TODO LIST </h3>
       <button type="button" class="btn btn-default btn-large col-3" data-toggle="modal" data-target="#addModal">
         ADD
       </button>
