--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -16,6 +16,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="/#portfolio">Portfolio</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/board">Story Board</a>
+            </li>
             
             {{#if usernameAuth.username}}
             <li class="nav-item">
