--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -19,7 +19,7 @@
     </ul>
     <div class="tab-content" id="story">
       <div class="tab-pane p-3 fade show active" id="story-list" role="tabpanel" aria-labelledby="story-list-tab">
-        <table class="table table-dark">
+        <table class="table table-dark" id="stories-table">
           <thead>
             <tr>
               <th scope="col">#</th>
@@ -143,7 +143,14 @@
   var currPage = $(".pagination").data('curr');
   var nextPage = $(".pagination-next");
   var prevPage = $(".pagination-prev");
+  var table = $("#stories-table");
   $(paginationItem[currPage - 1]).addClass('active');
+  console.log(paginationItem.length)
+  if(paginationItem.length === 0) {
+    table.hide();
+    prevPage.hide();
+  nextPage.hide();
+  }
   if(currPage===1) {
     prevPage.hide()
   }
