--- a/views/board/index.handlebars
+++ b/views/board/index.handlebars
@@ -1,30 +1,41 @@
 <section class="bg-dark" id="story-dashboard-main">
   <div class="container">
     <div class="row justify-content-center p-2">
-      <div class="">
-       <h1>Isotope - filtering</h1>
-
-      <div class="button-group filters-button-group">
-        <button class="button is-checked" data-filter="*">show all</button>
-        {{#each categories}}
-          <button class="button" data-filter=".{{category}}">{{category}}</button>
-        {{/each}}
-      </div>
-
-      <div class="grid">
-        <div class="grid-sizer"></div>
-        {{#each feeds}}
-        <div class="grid-item m-1 {{category}}" data-category="{{category}}">
-          <div class="card">
-            <div class="card-body" >
-              <h5 class="card-title">{{title}}</h5>
-              <a href="{{link}}" class="btn btn-primary">Go to the article</a>
+      <div class="col-12 text-align-center">
+        <div class="row mb-3">
+          <div class="col-md-12 col-lg-8 btn-group btn-group-toggle">
+            <label class="btn btn-secondary js_isotope-bulleed active" data-filter="*">
+                <input type="radio" name="options" id="show-all" autocomplete="off" > All
+              </label>
+            {{#each categories}}
+              <label class="btn btn-secondary js_isotope-bulleed" data-filter=".{{category}}">
+                <input type="radio" name="options" id="{{category}}" autocomplete="off"> {{category}}
+              </label>
+            {{/each}}
+          </div>
+          <div class="col-md-12 col-lg-4 d-flex">
+            <div class="ml-auto btn-group btn-group-toggle">
+              <label class="btn btn-secondary js_isotope-input pl-3 pr-3 active">
+                <input type="text" name="search" id="feeds-search" autocomplete="off" placeholder="Search"/> 
+              </label>
             </div>
           </div>
         </div>
-        {{/each}}
       </div>
-      </div>
+      <div class="col-12 text-align-center">
+        <div class="grid">
+          {{#each feeds}}
+          <div class="grid-item {{category}}" data-category="{{category}}">
+            <div class="card">
+              <div class="card-body" >
+                <h5 class="card-title">{{title}}</h5>
+                <a href="{{link}}" class="">More detail ... </a>
+              </div>
+            </div>
+          </div>
+          {{/each}}
+        </div>
+      </div>   
     </div>
   </div>
 </section>
@@ -44,29 +55,24 @@
 // init Isotope
 var $grid = $('.grid').isotope({
   itemSelector: '.grid-item',
-  layoutMode: "fitRows",
-  
-  percentPosition: true,
   masonry: {
-    columnWidth: '.grid-sizer',
-    fitWidth: true
+    columnWidth: 200,
+    isFitWidth: true,
+    gutter: 10
   }
-
 });
 
-$('.button').on('click', function(e) {
+$('.js_isotope-bulleed').on('click', function(e) {
   const filterValue =  $(this).attr('data-filter');
-  console.log(filterValue)
+  $('.js_isotope-bulleed').each(function(e){
+    $(this).removeClass('active')
+  })
+  console.log($('.js_isotope-bulleed'))
+  $(this).addClass('active')
   $grid.isotope({ filter: filterValue });
 })
-// change is-checked class on buttons
-$('.button-group').each( function( i, buttonGroup ) {
-  var $buttonGroup = $( buttonGroup );
-  $buttonGroup.on( 'click', 'button', function() {
-    $buttonGroup.find('.is-checked').removeClass('is-checked');
-    $( this ).addClass('is-checked');
-  });
-});
+
+
 
 
 
