--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,8 @@
 
   <!-- CSS -->
   <link href="/css/index.css" rel="stylesheet">
+  <link href="/css/feed-detail.css" rel="stylesheet">
+
 
   <!-- Custom styles for this template -->
   <link href="/css/creative.min.css" rel="stylesheet">
