--- a/public/css/index.css
+++ b/public/css/index.css
@@ -82,14 +82,121 @@
   margin-bottom: 10px;
 }
 
-.grid-item>.card:hover {
-  transform: translate(-1px, -1px) scale(1.05);
-  border: 2px solid #f05f40;
-}
-
 #feeds-search {
   background: #6c757d;
   outline: #6c757d;
   border: #6c757d;
   color: white;
+}
+
+/* CSS code from tutorial: http://24ways.org/2010/intro-to-css-3d-transforms/ */
+
+#cardlist {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  -webkit-perspective: 800;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  margin-top: 20px;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform 1s;
+}
+
+.card:hover {
+  cursor: pointer;
+}
+
+.card div {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+}
+
+.card .front {
+  background: white;
+  display: flex;
+  justify-items: center;
+}
+
+.card .back {
+  background: #f05f40;
+  -webkit-transform: rotateY(180deg);
+}
+
+.card .back a {
+  color: white;
+  font-weight: bold;
+}
+
+.card.flipped {
+  -webkit-transform: rotateY(180deg);
+}
+
+.card.book {
+  -webkit-transform-origin: right center;
+}
+
+.card.reverse {
+  -webkit-transform-origin: right center;
+}
+
+.card.reverse.flipped {
+  -webkit-transform: translateX(-100%) rotateY(-180deg);
+}
+
+/* Element in card style */
+
+.card {
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+  min-height: 200px;
+}
+
+.card div {
+  border-radius: 10px;
+}
+
+h2 {
+  text-align: center;
+  color: #fff;
+  font-weight: normal;
+  margin-top: 100px;
+}
+
+button {
+  padding: 5px;
+  background: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  font-size: 14pt;
+  font-weight: 300;
+  font-family: 'Lato';
+}
+
+.card p {
+  padding: 15px 25px;
+  text-align: left;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: -30px;
+  -webkit-transition: 1s;
+  -webkit-transition-delay: 0.4s;
+}
+
+.card.flipped p {
+  opacity: 1;
+  left: 0;
+}
+
+.card h5 {
+  display: flex;
+  justify-items: center;
+  align-items: center;
 }
